--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "nib": "0.x"
     },
     "DEBUG local dependencies": {
-        "debug-fork": "0.x"
+        "debug-fork": "0.x",
+        "lodash-fork": "0.x",
+        "file_memoize": "0.x"
     }
 }
