--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mvc_manifester",
+    "name": "manifest_mvc",
     "version": "0.0.0",
     "description": "ERROR: No README.md file found!",
     "main": "index.coffee",
