--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "",
   "private": true,
   "dependencies": {
-    "stylus": "0.x",
-    "jade": "0.x",
-    "nib": "0.x",
     "async": "0.x",
-    "glob": "3.x"
+    "glob": "3.x",
+    "js-beautify": "1.x",
+    "callsite": "1.x",
+    "temp": "0.x"
   },
   "DEBUG local dependencies": {
     "debug-fork": "0.x",
